--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
     <script>
         if (typeof navigator.serviceWorker !== 'undefined') {
-            navigator.serviceWorker.register('pwabuilder-sw.js')
+            navigator.serviceWorker.register('/static/pwabuilder-sw.js')
         }
     </script>
 </head>
