--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,12 @@
     <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 
     <script>
-        if (typeof navigator.serviceWorker !== 'undefined') {
-            navigator.serviceWorker.register('/static/pwabuilder-sw.js')
-        }
+
+
+        navigator.serviceWorker.register("static/service-worker.js")
+
     </script>
+    <link rel="manifest" href="static/manifest.json" />
 </head>
 
 <body>
