--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,8 @@
 
     <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 
-    <script>
 
-
-        navigator.serviceWorker.register("static/service-worker.js")
-
-    </script>
+    <script>navigator.serviceWorker.register("static/service-worker.js")</script>
     <link rel="manifest" href="static/manifest.json" />
 </head>
 
